--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required( VERSION 3.1)
 
 project( MulleBase64 C)
+add_definitions( -DMULLE_BASE64_EXTERN_GLOBAL=extern)
+
 #
 # Turn a "Library" into an "Executable"
 # * touch src/main.m
@@ -55,6 +57,10 @@ elseif( "${MULLE_PROJECT_TYPE}" STREQUAL "Library")
       install( FILES ${INSTALL_PUBLIC_HEADERS}  DESTINATION "include/${PROJECT_NAME}")
       install( FILES ${INSTALL_PRIVATE_HEADERS} DESTINATION "include/${PROJECT_NAME}/private")
       install( FILES ${CMAKE_INCLUDES}          DESTINATION "include/${PROJECT_NAME}/cmake")
+      # hopefully temporary fix for Objective-C
+      if( EXISTS "src/reflect/objc-loader.inc")
+         install( FILES src/reflect/objc-loader.inc DESTINATION "include/${PROJECT_NAME}")
+      endif()
 
       # short cut out
       if( NOT COMPILE_PHASE AND NOT LINK_PHASE)
