--- a/cola/properties.plist
+++ b/cola/properties.plist
@@ -7,12 +7,12 @@
       user="MulleWeb";
       repo="MulleBase64";
       homepage="https://github.com/MulleWeb/MulleBase64";
-      license="BSD-3-Clause"
+      license="BSD-3-Clause";
    };
    dependencies =
    (
       {
-         description="🛸 MulleFoundationBase does something";
+         description="🧱 MulleFoundationBase amalgamates Foundations projects";
          domain="github";
          name="MulleFoundationBase";
          repo="MulleFoundationBase";
@@ -27,5 +27,5 @@
          url="https://github.com/mulle-objc/mulle-objc-list";
          user="mulle-objc";
       }
-   )
+   );
 }
